syntax = "proto3";

package analisis;

service AnalisisService {
  rpc Agregar (AgregarRequest) returns (AgregarResponse);
  rpc Filtrar (FiltrarRequest) returns (FiltrarResponse);
  rpc Transformar (TransformarRequest) returns (TransformarResponse);
}

message AgregarRequest {
  repeated int32 numeros = 1;
}

message AgregarResponse {
  int32 resultado = 1;
}

message FiltrarRequest {
  repeated int32 numeros = 1;
  int32 umbral = 2;
}

message FiltrarResponse {
  repeated int32 resultado = 1;
}

message TransformarRequest {
  repeated int32 numeros = 1;
  string operacion = 2;
}

message TransformarResponse {
  repeated int32 resultado = 1;
}


#python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. analisis_datos.proto
